overflow fix + scrollbar styling

--- a/style.css
+++ b/style.css
@@ -6,10 +6,39 @@
   box-sizing: border-box;
 }
 
+/* scrollbar styling */
+
+::-webkit-scrollbar {
+  width: 1rem;
+}
+
+::-webkit-scrollbar-track {
+  background: var(--scrollBar-color-background);
+}
+
+.playlist-area ::-webkit-scrollbar-track {
+  background: var(--scrollBar-bg-playlist-area);
+}
+
+::-webkit-scrollbar-thumb {
+  background: var(--scrollBar-color-thumb);
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: var(--scrollBar-color-thumb-hover);
+}
+
+/* scrollbar styling end */
+
 /* Dark Mode toggle */
 
 :root {
   font-family: Sans-serif;
+
+  --scrollBar-color-background: #f8f0fc;
+  --scrollBar-color-thumb: #e599f7;
+  --scrollBar-color-thumb-hover: #da77f2;
+  --scrollBar-bg-playlist-area: #ffffff;
 
   /* --background-body: linear-gradient(
     89.89deg,
@@ -73,6 +102,11 @@
   --icon-color: #b4b4b4;
   --aside-color: #1f1f1f;
   --text-color: #b4b4b4;
+
+  --scrollBar-color-background: #292929;
+  --scrollBar-color-thumb: #f9f9f98c;
+  --scrollBar-color-thumb-hover: #bb86fc;
+  --scrollBar-bg-playlist-area: #121010;
 
   --button-hover-background-color: #292929;
   --button-hover-border-color: #b4b4b4;
@@ -152,13 +186,13 @@ body button {
   }
 
   .playlist-area {
-    min-height: 50rem;
+    max-height: 50rem;
     width: 90%;
     margin: 0 auto;
   }
 
   .play-music-area {
-    min-height: 50rem;
+    max-height: 45rem;
     width: 90%;
     margin: 0 auto;
   }
@@ -254,7 +288,9 @@ aside a {
   position: relative;
   align-self: center;
   justify-content: center;
-  align-items: center;
+  /* align-items: center; */
+  display: flex;
+  flex-direction: column;
   box-shadow: var(--box-shadow-main-tags);
   background: var(--background-secondary-color);
 }
@@ -300,6 +336,8 @@ aside a {
   height: inherit;
   background: inherit;
   border: none;
+  white-space: nowrap;
+  overflow: hidden;
   color: var(--text-color-main-tag-tabs-class);
 }
 
@@ -338,6 +376,12 @@ aside a {
   font-size: 2.75rem;
 }
 
+.music__container {
+  height: 94%;
+  overflow: hidden;
+  overflow-y: scroll;
+}
+
 /* Menu area, Play area Ends */
 
 /* Play music are styling */
@@ -355,11 +399,12 @@ aside a {
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 3rem;
+  gap: 4rem;
   margin-top: 4rem;
   padding: 1rem;
   color: var(--play-music-area-music-icon-button);
 }
+
 .container-play-music-area button {
   color: var(--play-music-area-music-icon-button);
 }
